test/1.2/errors/T_EASSIGN_09.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

// SIMICS-8783
method init {
    local int i;
    /// ERROR EASSIGN
    (0 ? i : i) = 5;
}
